# sev-snp-measure

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  fortanixvme-snp-sign  requirements.txt  setup.cfg  sev-snp-measure.py  snp-create-id-block.py
.github/: auto_assign-issues.yml  auto_assign.yml
.github/workflows/: codeql-analysis.yml  python-package.yml
sevsnpmeasure/: __init__.py  cli.py  gctx.py  guest.py  id_block.py  ovmf.py  sev_hashes.py  sev_mode.py  vcpu_types.py  vmm_types.py  vmsa.py
tests/: test_cli.py  test_guest.py  test_id_block.py  test_sev_mode.py  test_vcpu_types.py
tests/fixtures/: README.md  svsm_ovmf.fd
tests/keyfile/: author_key_test.pem  id_key_test.pem
