[metadata]
name = sev-snp-measure
version = 0.0.11
author = Dov Murik
author_email = dov.murik@gmail.com
description = Calculate expected measurement of an AMD SEV/SEV-ES/SEV-SNP guest VM for confidential computing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/virtee/sev-snp-measure
project_urls =
    Bug Tracker = https://github.com/virtee/sev-snp-measure/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Software Development :: Libraries

[options]
packages = sevsnpmeasure
python_requires = >=3.7
install_requires =
    cryptography>=39.0.1

[options.entry_points]
console_scripts =
    sev-snp-measure = sevsnpmeasure.cli:main
    snp-create-id-block = sevsnpmeasure.id_block:main

[flake8]
max-complexity = 12
max-line-length = 127
